[package]
name = "kopfrechner"
authors = ["Wolfgang Schwendtbauer"]
repository = "https://github.com/Woife5/kopfrechner"
version = "0.4.1"
edition = "2021"

[dependencies]
colored = "2.0.4"
dialoguer = "0.10.4"
rand = "0.8.5"
self_update = { version = "0.37.0", features = [ "archive-zip", "archive-tar", "compression-zip-deflate" ] }

# Cargo-dist config
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.2.0"
ci = ["github"]
installers = []
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
